--- a/Switch.Domain/Switch.Domain.csproj
+++ b/Switch.Domain/Switch.Domain.csproj
@@ -7,4 +7,12 @@
   <ItemGroup>
     <Compile Remove="Class1.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Entities\" />
+    <Folder Include="Enums\" />
+    <Folder Include="Interfaces\" />
+    <Folder Include="Interfaces\Services\" />
+    <Folder Include="Services\" />
+    <Folder Include="Interfaces\Repositories\" />
+  </ItemGroup>
 </Project>
